[project]
name = "callback_and_decorator"
version = "0.1.0"
description = ""
authors = [
    {name = "raylai",email = "chunjueilai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "callback_and_decorator", from = "src"}]

[tool.poetry.scripts]
callback_and_decorator = "callback_and_decorator.main:main"


[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
pydocstyle = "^6.3.0"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
